# licenser-cpp

./: .gitignore
src/: .clang-format.txt  .editorconfig  CMakeLists.txt  license-formatters.hpp  license-parser.cpp  license-parser.hpp  license.cpp  license.hpp  license.peg  license.peg.hpp.in  overloaded.hpp  test.cpp
test/: test.lic
